data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_742.wast
;; 3. **Test Description**: Position a `nop` instruction right before a `br_table` such that the stack remains unchanged for branching operations in any context within the instruction sequence.    - **Constraint**: Ensuring `nop` does not change stack for the `br_table` execution.    - **Edge Case**: `br_table` functionality with indices out-of-bounds and ensuring no interference from `nop`.

(assert_invalid
  (module
    (func $test (param i32) 
      (block $label0
        (nop)
        (br_table $label0 (i32.const 0))
      )
    )
  )
  "label index out of bounds"
)